style: fix cursor ring z-index to 1 and slide in animation

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -77,6 +77,7 @@
     background-color: transparent;
     mix-blend-mode: difference;
     pointer-events: none;
+    z-index: 1;
   }
 
   .cursor__ring > .cursor__ring__middle:nth-child(1){
@@ -156,8 +157,8 @@
 .about__container{
   overflow: hidden;
   opacity: 0;
-  transform: translateX(20rem);
-  transition: all 2.5s;
+  transform: translateX(8rem);
+  transition: all 2s;
 }
 
 /* Content Container Scroll Trigger Animation */
@@ -167,10 +168,10 @@
 }
 
 .about__text__container{
-  transform: translateX(-20rem);
+  transform: translateX(-8rem);
   opacity: 0;
   margin:0;
-  transition: all 2.5s;
+  transition: all 2s;
 }
 
 .about__text__container.visible{
